final touch done

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>TheSlotMachine</title>
   <script async defer src="script.js"></script>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -21,9 +21,12 @@
       <div class="value" id="value3">😇</div>
     </div>
   </div>
-  <input id="inpSpeed" type="number" min="1" max="10">
-  <button class="btn" id="btnStop">STOP</button>
-  <button class="btn" id="btnStart">RESTART</button>
+  <div class="speednbtn">
+    <input id="inpSpeed" type="number" min="1" max="10" placeholder="speed">
+    <button class="btn" id="btnStop">STOP</button>
+    <button class="btn" id="btnStart">RESTART</button>
+  </div>
+
   
 </body>
 
